kubernetes/04-hive-metastore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  namespace: nexoryx-datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-metastore
  template:
    metadata:
      labels:
        app: hive-metastore
    spec:
      containers:
      - name: hive-metastore
        image: apache/hive:4.0.0
        ports:
        - containerPort: 9083
---
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
  namespace: nexoryx-datalake
spec:
  selector:
    app: hive-metastore
  ports:
  - port: 9083
