kubernetes/07-trino.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  namespace: nexoryx-datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino-coordinator
  template:
    metadata:
      labels:
        app: trino-coordinator
    spec:
      containers:
      - name: trino
        image: trinodb/trino:448
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /v1/info
            port: 8080
          initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: trino-coordinator
  namespace: nexoryx-datalake
spec:
  selector:
    app: trino-coordinator
  ports:
  - port: 8080
